Fix jumping of sidebar by setting the dimenstions of the profile picture

--- a/_sass/components/_profile.scss
+++ b/_sass/components/_profile.scss
@@ -6,6 +6,8 @@
 
     &__icon {
         border-radius: 50%;
+        width: 80px;
+        height: 80px;
     }
 
     &__name {
